# Resume-Screener

./: .env.example  .gitignore  JD.md  README.md  docker-compose.yml
.claude/: settings.json
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  vite-env.d.ts
frontend/src/components/: CreateJob.tsx  Results.tsx
scripts/: e2e_local_test.py  init-localstack.sh  run-local.ps1  run-local.sh  run-stop.sh  run-worker.sh
services/intake/: Dockerfile  requirements.txt
services/intake/app/: main.py
services/intake/app/controllers/: jobs.py
services/intake/app/services/: intake_service.py
services/results/: Dockerfile
services/results/app/: main.py
services/results/app/controllers/: jobs.py
services/results/app/services/: results_service.py
services/worker/: Dockerfile  requirements.txt
services/worker/app/: main.py
services/worker/app/pipeline/: extract.py  llm.py  score.py
services/worker/app/services/: processor.py  text_extract.py
shared/: pyproject.toml
shared/src/screener_common/: __init__.py  aws.py  keys.py  logging_config.py  models.py  repository.py  settings.py
