[project]
name = "screener-common"
version = "0.1.0"
description = "Shared contracts, settings, AWS clients and logging for Resume Screener services"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
